@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2007-2008 - TortoiseSVN
+// Copyright (C) 2007-2009 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -45,6 +45,7 @@ protected:
 
 	DECLARE_MESSAGE_MAP()
 	
+	svn_diff_file_ignore_space_t GetIgnores();
 	
 	CComboBox						m_depthCombo;
 	CToolTips						m_tooltips;
